Complete page outline and text

--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
 <body>
   <h1>Discover hidden places in the world around you</h1>
   <a href="">Download Excursion (Coming soon!)</a>
+  <p>image here</p>
+  <h2>Your personal travel guide</h2>
+  <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+  <p>image here</p>
+  <p>image here</p>
+  <h2>Coming Soon for iPhone and Andriod</h2>
+  <a href="">Download Excursion (Coming soon!)</a>
+  <p>© Excursion</p>
 </body>
 </html>
