--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
 <body>
   <h1>Discover hidden places in the world around you</h1>
   <a href="">Download Excursion (Coming soon!)</a>
-  <p><img href="resources/images/excursion.mp4" alt="phone video image"></p>
+  <p>
+    <video autoplay muted loop>
+      <source src="./resources/images/excursion.mp4" type="video/mp4">
+    </video>
+  </p>
   <h2>Your personal travel guide</h2>
   <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-  <p><img href="resources/images/camp.jpg" alt="camp image"></p>
-  <p><img href="resources/images/phone.png" alt="phone image"></p>
+  <p><img src="./resources/images/camp.jpg" alt="camp image"></p>
+  <p><img src="./resources/images/phone.png" alt="phone image"></p>
   <h2>Coming Soon for iPhone and Andriod</h2>
   <a href="">Download Excursion (Coming soon!)</a>
   <p id="copyright">© Excursion</p>
